# IFJ21_compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  bintree.c  bintree.h  error.c  error.h  exp_stack.c  exp_stack.c.swp  exp_stack.h  expression.c  expression.h  generator.c  generator.h  istring.c  istring.h  main.c  parser.c  parser.h  rozdeleni  scanner.c  scanner.h  stack.c  stack.h  string.c  string.h  symtable.c  symtable.h  test_source.cpp  token.c  token.h
test/: IFJ_bad.txt  IFJ_good.txt  file.code  file.out  source.tl
